--- a/site/themes/default/style.css
+++ b/site/themes/default/style.css
@@ -67,6 +67,15 @@ background-color:#FFF;
 	}
 }
 
+@media (max-width: 700px) {
+	.disp-w {
+		display: none !important;
+	}
+	.disp-s {
+		display: block !important;
+	}
+}
+
 /* page content */
 .contentwrap {
 margin:25px 30px 0px 30px;
